--- a/templates/reviews/office_dashboard.html
+++ b/templates/reviews/office_dashboard.html
@@ -28,7 +28,7 @@
             <div class="col-md-4">
                 <label class="form-label">Status</label>
                 <select name="status" class="form-select">
-                    {% for status in "ALL,DRAFT,SUBMITTED,RETURNED,APPROVED,MISSING".split(",") %}
+                    {% for status in status_options %}
                     <option value="{{ status }}" {% if status == status_filter %}selected{% endif %}>
                         {{ status|title }}
                     </option>
